<resources>
    <string name="app_name">Trabajo_Final_APP_Moviles</string>

    /*loguin*/
    <string name="inicio">Iniciar Sesion</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrarse</string>
<!--    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="tab_text_1">Mi Perfil</string>
    <string name="tab_text_2">Todos los Perfiles</string>-->
<string name="ingresarSinRegistro">Ingresar Sin Registro</string>

    /*registro*/
    <string name="nombre">Nombre</string>
    <string name="aoellido">Apellido</string>
    <string name="contrasenia">Contraseña</string>
    <string name="grupo">Grupo</string>
    <string name="telefono">Telefono</string>
    <string name="mail">E-mail</string>
    <string name="Elija">Elija un Equipo</string>
    <string name="todo">TODO</string>
    <string name="cargarImagen">Cargar Imagen . . . </string>

    /*busqueda*/
    <string name="busqueda">Busquemos . . .</string>

    /*tarea*/
    <string name="titulo">Titulo: </string>
    <string name="descripcion">Descripcion: </string>
    <string name="prioridad">Prioridad: </string>
    <string name="fecha">Fecha de creacion: </string>
    <string name="estado">Estado: </string>
    <string name="creador">Creador: </string>
    <string name="trabajando">Asignado a: </string>

    /*actualizar tarea*/
    <string name="actualizarPerfil">Actualizar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

  /*tarea*/
    <string name="crearTarea">Crear Tarea</string>
</resources>
