<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imagenId"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:contentDescription="@string/todo"
        android:onClick="cargarImagen"
        android:padding="20dp"
        android:src="@drawable/imagen_no_disponible" />

    <EditText
        android:id="@+id/nombre"
        android:padding="10dp"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombre"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="78dp"
        android:importantForAutofill="no" />

    <EditText
        android:padding="10dp"
        android:id="@+id/contrasenia"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/contrasenia"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tituloRol"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Elija"
        android:padding="10dp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:spinnerMode="dialog"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/telefono"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btnRegistroForm"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:onClick="registar"
        android:padding="10dp"
        android:text="@string/registrar" />

</LinearLayout>