<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#41DE03EA"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/inicio"
        android:textSize="50sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/campoUsuario"
        android:layout_width="271dp"
        android:layout_height="79dp"
        android:layout_gravity="center_horizontal"
        android:autofillHints="false"
        android:hint="@string/usuario"
        tools:ignore="LabelFor" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/campoContrasenia"
        android:layout_width="271dp"
        android:layout_height="79dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/contrasenia"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="271dp"
            android:layout_height="65dp"
            android:text="@string/ingresar" />
        <!--
        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btnIngresarSinRegistro"
            android:layout_width="190dp"
            android:layout_height="65dp"
            android:onClick="registrar"
            android:text="@string/ingresarSinRegistro" />
-->
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Si tiene que registrarse ingrese aqui: " />

        <TextView
            android:id="@+id/registrar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/registrar"
            android:textColor="#5C0C85" />
    </LinearLayout>
</LinearLayout>
