<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp" tools:context=".MainActivity"
    android:orientation="vertical">

    <TabHost android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TabWidget android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@android:id/tabs" />

            <FrameLayout android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@android:id/tabcontent" >
                <!--tab 1-->
                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="right"
                        android:orientation="vertical"
                        android:paddingRight="40dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/titulo"
                                android:textSize="20dp" />

                            <EditText
                                android:id="@+id/tituloAgregarTarea"
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:textSize="20dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/descripcion"
                                android:textSize="20dp" />

                            <EditText
                                android:id="@+id/editText5"
                                android:layout_width="200dp"
                                android:layout_height="181dp"
                                android:ems="10"
                                android:gravity="start|top"
                                android:inputType="textMultiLine"
                                android:paddingLeft="10dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/prioridad"
                                android:textSize="20dp" />

                            <EditText
                                android:id="@+id/prioridadtarea"
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:textSize="20dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/fecha"
                                android:textSize="20dp" />

                            <EditText
                                android:id="@+id/fechatarea"
                                android:layout_width="200dp"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:textSize="20dp" />
                        </LinearLayout>
                    </LinearLayout>
                <Button
                    android:layout_marginTop="20dp"
                    android:layout_width="270dp"
                    android:layout_gravity="center"
                    android:layout_height="70dp"
                    android:text="@string/crearTarea"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>